# saltzapp-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
chat/: admin.py  apps.py
chat/erros/: __init__.py  erro_de_validacao.py
chat/mensagens_de_bot/: __init__.py  mensagem_com_substituicao.py  mensagem_de_bot.py  mensagem_de_whats.py  mensagem_simples.py  mensagens.py  pergunta_whats_cliente.py  substituir.py
chat/migrations/: 0001_initial.py  0002_alter_bot_id_alter_cliente_id_alter_mensagem_id.py  0002_alter_cliente_whatsapp.py  0002_cliente_funcionario_mensagem.py  0002_mensagem_nova.py  0003_alter_cliente_whatsapp_clienteemcriacao.py  0003_ultimamensagem_alter_mensagem_enviada_em.py  0003_ultimamensagem_nova.py  0004_alter_ultimamensagem_id.py  0004_remove_mensagem_nova_remove_ultimamensagem_nova.py  0005_ultimamensagem_usuario_1_nome_and_more.py  0006_remove_ultimamensagem_mensagem_id_and_more.py  0007_remove_ultimamensagem_texto_and_more.py
chat/models/: __init__.py  bot.py  cliente.py  cliente_em_criacao.py  funcionario.py  mensagem.py  ultima_mensagem.py  usuario.py
chat/otds/: __init__.py  cadastro_otd.py  conversa_otd.py  mensagem_otd.py  nova_mensagem_otd.py  novo_cliente_otd.py  novo_usuario_otd.py  ultima_mensagem_otd.py  usuario_otd.py  usuario_simplificado_otd.py
chat/repositorios/: __init__.py  cliente_em_cliacao_repositorio.py  mensagem_repositorio.py  ultima_mensagem_repositorio.py  (+1 more)
saltzapp_backend/: asgi.py  settings.py  urls.py  wsgi.py
testes/: settings_de_teste.py
(+36 files in other folders)
