[tool.poetry]
name = "saltzapp-backend"
version = "1"
description = ""
authors = ["fr-mm <chico.zimcolor@gmail.com>"]
readme = "README.md"
packages = [{include = "saltzapp_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
djangorestframework = "^3.14.0"
selenium = "^4.7.2"
pymongo = "^4.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
